@@ -369,6 +369,7 @@ struct ZPBLK {
 struct SYSBLK {
 #define HDL_VERS_SYSBLK   "3.06"        /* Internal Version Number   */
 #define HDL_SIZE_SYSBLK   sizeof(SYSBLK)
+        time_t  impltime;               /* TOD system was IMPL'ed    */
         int     arch_mode;              /* Architecturual mode       */
                                         /* 0 == S/370                */
                                         /* 1 == ESA/390              */
